Possible fix for travis (haha yeah right)

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ php:
 
 # optionally specify a list of environments, for example to test different RDBMS
 env:
-  - DB=sqlite
+  - DB=sqlite_testing
 
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
