--- a/.env.testing
+++ b/.env.testing
@@ -12,7 +12,7 @@ FILESYSTEM_DISK=local
 # --------------------------------------------
 # REQUIRED: DATABASE SETTINGS
 # --------------------------------------------
-DB_CONNECTION=sqlite
+DB_CONNECTION=sqlite_testing
 DB_HOST=localhost
 DB_DATABASE=sqlite_testing.sqlite
 DB_USERNAME=null
