--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_script:
   - wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 -O $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2
   - tar -xvf $PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64.tar.bz2 -C $PWD/travis-phantomjs
   - export PATH=$PWD/travis-phantomjs/phantomjs-2.1.1-linux-x86_64/bin:$PATH
+
   - phantomjs --webdriver=4444  &
   - sleep 10
   - touch database/testing.sqlite
@@ -54,7 +55,7 @@ after_success:
 after_failure:
   - cat tests/_output/AccessoriesCept.fail.html
 #  - curl http://localhost:4444
-  - curl http://localhost:8000
+  - curl http://localhost:8000/login
 # configure notifications (email, IRC, campfire etc)
 notifications:
   email: false
