--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -12,7 +12,7 @@ class_name: AcceptanceTester
 modules:
   enabled:
     - WebDriver:
-       url: 'https://snipe-it.dev:1337'
+       url: https://snipe-it.dev:1337
        browser: phantomjs
 
 env:
@@ -21,3 +21,4 @@ env:
       config:
         WebDriver:
           url: http://localhost:8000
+          browser: phantomjs
