Try diff block for testing (not testing-ci)

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -22,3 +22,9 @@ env:
         WebDriver:
           url: http://localhost:8000
           browser: phantomjs
+  testing:
+    modules:
+      config:
+        WebDriver:
+          url: http://localhost:8000
+          browser: phantomjs
