Swtch env to just testing.
This won't work, but neither does anything else

--- a/.env.testing
+++ b/.env.testing
@@ -1,7 +1,7 @@
 # --------------------------------------------
 # REQUIRED: BASIC APP SETTINGS
 # --------------------------------------------
-APP_ENV=testing-ci
+APP_ENV=testing
 APP_DEBUG=true
 APP_KEY=ChangeMe
 APP_URL=null
