Fixed DB name in testing config

--- a/.env.testing
+++ b/.env.testing
@@ -14,7 +14,7 @@ FILESYSTEM_DISK=local
 # --------------------------------------------
 DB_CONNECTION=sqlite_testing
 DB_HOST=localhost
-DB_DATABASE=sqlite_testing.sqlite
+DB_DATABASE=testing.sqlite
 DB_USERNAME=null
 DB_PASSWORD=null
 
