--- a/.env.testing
+++ b/.env.testing
@@ -4,7 +4,7 @@
 APP_ENV=testing
 APP_DEBUG=true
 APP_KEY=ChangeMe
-APP_URL=null
+APP_URL=http://localhost:8000
 APP_TIMEZONE='US/Pacific'
 APP_LOCALE=en
 FILESYSTEM_DISK=local
