Reformatting URL in acceptance.yml

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -18,13 +18,11 @@ modules:
 env:
   testing-ci:
     modules:
-      config:
-        WebDriver:
+        - WebDriver:
           url: http://localhost:8000
           browser: phantomjs
   testing:
     modules:
-      config:
-        WebDriver:
+        - WebDriver:
           url: http://localhost:8000
           browser: phantomjs
