--- a/.travis.yml
+++ b/.travis.yml
@@ -45,17 +45,17 @@ before_script:
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
-# script: ./vendor/bin/codecept run --env testing-ci <-- this doesn't work
+script: ./vendor/bin/codecept run --env testing
 # script: ./vendor/bin/codecept run unit
-script: ./vendor/bin/codecept run
+#script: ./vendor/bin/codecept run
 
 after_success:
   - codecov
 
 after_failure:
   - cat tests/_output/AccessoriesCept.fail.html
-#  - curl http://localhost:4444
   - curl http://localhost:8000/login
+
 # configure notifications (email, IRC, campfire etc)
 notifications:
   email: false
