--- a/.env.testing
+++ b/.env.testing
@@ -12,10 +12,10 @@ FILESYSTEM_DISK=local
 # --------------------------------------------
 # REQUIRED: DATABASE SETTINGS
 # --------------------------------------------
-DB_CONNECTION=sqlite_testing
+DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_DATABASE=testing.sqlite
-DB_USERNAME=null
+DB_DATABASE=snipeit_unit
+DB_USERNAME=travis
 DB_PASSWORD=null
 
 # --------------------------------------------
