--- a/.env.testing-ci
+++ b/.env.testing-ci
@@ -14,8 +14,8 @@ FILESYSTEM_DISK=local
 # --------------------------------------------
 DB_CONNECTION=sqlite_testing
 DB_HOST=localhost
-DB_DATABASE=testing.sqlite
-DB_USERNAME=null
+DB_DATABASE=snipeit_unit
+DB_USERNAME=travis
 DB_PASSWORD=null
 
 # --------------------------------------------
