--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -6,4 +6,4 @@ modules:
     enabled:
         - \Helper\Unit
         - Laravel5:
-            environment_file: .env.testing
+            environment_file: .env.testing-ci
