Fixed CI db stuff

--- a/.env.testing-ci
+++ b/.env.testing-ci
@@ -12,7 +12,7 @@ FILESYSTEM_DISK=local
 # --------------------------------------------
 # REQUIRED: DATABASE SETTINGS
 # --------------------------------------------
-DB_CONNECTION=sqlite_testing
+DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_DATABASE=snipeit_unit
 DB_USERNAME=travis
