--- a/tests/_envs/testing-ci.yml
+++ b/tests/_envs/testing-ci.yml
@@ -11,7 +11,7 @@ class_name: AcceptanceTester
 modules:
     enabled:
         - WebDriver:
-            url: 'https://localhost:8000'
+            url: 'http://localhost:8000'
             browser: 'phantomjs'
         - \Helper\Acceptance
         - Laravel5:
