--- a/tests/_envs/testing-ci.yml
+++ b/tests/_envs/testing-ci.yml
@@ -12,9 +12,7 @@ modules:
     enabled:
         - WebDriver
         - \Helper\Acceptance
-        - Laravel5:
-            part: ORM
     config:
         WebDriver:
-            url: 'http://localhost:8000'
-            browser: 'phantomjs'
+            url: http://localhost:8000
+            browser: phantomjs
