--- a/tests/_envs/testing-ci.yml
+++ b/tests/_envs/testing-ci.yml
@@ -10,11 +10,9 @@
 class_name: AcceptanceTester
 modules:
     enabled:
-        - WebDriver
+         - WebDriver:
+            url: http://localhost:8000
+            browser: phantomjs
         - \Helper\Acceptance
         - Laravel5:
             part: ORM
-    config:
-        WebDriver:
-            url: 'http://localhost:8000'
-            browser: 'phantomjs'
