--- a/tests/_envs/testing.yml
+++ b/tests/_envs/testing.yml
@@ -10,9 +10,9 @@
 class_name: AcceptanceTester
 modules:
     enabled:
-        - WebDriver
+         - WebDriver:
+            url: http://localhost:8000
+            browser: phantomjs
         - \Helper\Acceptance
-    config:
-        WebDriver:
-            url: 'http://localhost:8000'
-            browser: 'phantomjs'
+        - Laravel5:
+            part: ORM
