Set DB prefix in env

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_HOST=localhost
 DB_DATABASE=null
 DB_USERNAME=null
 DB_PASSWORD=null
-
+DB_PREFIX=null
 
 # --------------------------------------------
 # REQUIRED: OUTGOING MAIL SERVER SETTINGS
