--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
       "watson/validating": "^2.0",
       "doctrine/cache": "v1.5.4",
       "doctrine/common": "v2.5.3",
-		  "doctrine/dbal": "v2.4.2",
+      "doctrine/dbal": "v2.4.2",
       "barryvdh/laravel-debugbar": "^2.1",
-      "spatie/laravel-backup": "^2.9"
+      "spatie/laravel-backup": "3.0"
     },
     "require-dev": {
       "fzaninotto/faker": "~1.4",
