--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
       "doctrine/common": "v2.5.3",
       "doctrine/dbal": "v2.4.2",
       "barryvdh/laravel-debugbar": "^2.1",
-      "spatie/laravel-backup": "3.0"
+      "spatie/laravel-backup": "^3.7"
     },
     "require-dev": {
       "fzaninotto/faker": "~1.4",
