Update docker support for upcoming v3

--- a/docker.env
+++ b/docker.env
@@ -1,6 +1,7 @@
 # Docker Environment File
 
 #Database Variables
+MYSQL_ROOT_PASSWORD=supersecuresecretthing
 MYSQL_DATABASE=snipeit
 MYSQL_USER=snipeit
 MYSQL_PASSWORD=tinglewingler
@@ -15,6 +16,9 @@ MAIL_ENV_USERNAME=uberbrady@gmail.com
 MAIL_ENV_PASSWORD=N7AqLufTZMULWHWYwJ0ZCw
 
 #SNIPE-IT Variables
-SNIPEIT_TIMEZONE=America/Los_Angeles
-SNIPEIT_LOCALE=es-ES
-SERVER_URL=https://192.168.99.100:32775
+APP_ENV=develop
+APP_DEBUG=true
+APP_KEY=Y5hJeC7x1i7OxhDrvrQPlB9KvCorvRdO
+APP_URL=http://127.0.0.1:32782
+APP_TIMEZONE=US/Pacific
+APP_LOCALE=en
