Clean up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ public/uploads/models/*
 public/uploads/avatars/*
 public/uploads/suppliers/*
 public/uploads/assets/*
+public/uploads/users/*
 public/uploads/*.gif
 public/uploads/*.jpg
 public/uploads/*.png
@@ -33,19 +34,16 @@ composer.phar
 /app/config/*/app.php
 /app/config/*/ldap.php
 public/packages/*
-/app/storage/views/*
-/app/storage/logs/*
-/app/storage/debugbar/
+storage/views/*
+storage/logs/*
+storage/debugbar/
 /bin/
 .idea
 crowdin.yaml
 public/uploads/logo.gif
 public/uploads/logo.png
-.siteflow
-public/assets/.siteflow
-app/config/local/session.php
 .couscous
-app/storage/dumps/*
+storage/dumps/*
 tests/_data/scenarios
 storage/laravel-backups
 storage/private_uploads/users/*
