Temporarily remove clone option from categories view

--- a/.gitignore
+++ b/.gitignore
@@ -24,23 +24,23 @@ tests/_support/_generated/*
 
 /bootstrap/compiled.php
 composer.phar
-/app/config/database.php
-/app/config/mail.php
-/app/database/*.sqlite
-/app/storage/meta/services.json
-/app/config/*/mail.php
-/app/config/*/session.php
-/app/config/*/database.php
-/app/config/*/app.php
-/app/config/*/ldap.php
+app/config/database.php
+app/config/mail.php
+app/database/*.sqlite
+app/storage/meta/services.json
+app/config/*/mail.php
+app/config/*/session.php
+app/config/*/database.php
+app/config/*/app.php
+app/config/*/ldap.php
 public/packages/*
-storage/views/*
 storage/logs/*
 storage/debugbar/
 /bin/
 .idea
 crowdin.yaml
 public/uploads/logo.gif
+public/uploads/logo.svg
 public/uploads/logo.png
 .couscous
 storage/dumps/*
