--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_ENV=production
 APP_DEBUG=false
 APP_KEY=ChangeMe
 APP_URL=null
-APP_TIMEZONE='US/Pacific'
+APP_TIMEZONE='UTC'
 APP_LOCALE=en
 
 
