--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DB_DATABASE=null
 DB_USERNAME=null
 DB_PASSWORD=null
 DB_PREFIX=null
-DB_DUMP_PATH='/usr/local/bin'
+DB_DUMP_PATH='/usr/bin'
 
 # --------------------------------------------
 # REQUIRED: OUTGOING MAIL SERVER SETTINGS
