Fix reverse proxy support
Reintroducing trusted proxies via fideloper/proxy:

* Upgraded fideloper/proxy to 3.1
* Added fideloper/proxy to Http/Kernel.php
* Added fideloper/proxy to config/app.php
* Added environment variable APP_TRUSTED_PROXIES to env (with '*' being the default fallback)

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
       "league/csv": "~7.0",
       "maknz/slack": "dev-master",
       "erusev/parsedown": "dev-master",
-      "fideloper/proxy": "2.1.1",
+      "fideloper/proxy": "^3.1",
       "guzzlehttp/guzzle": "5.3.0",
       "aws/aws-sdk-php-laravel": "~3.0",
       "tecnickcom/tc-lib-barcode": "dev-master",
