Generate barcodes locally and try to serve them if they exist

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Homestead.yaml
 output
 phpDocumentor.phar
 public/uploads/*.gif
+public/uploads/barcodes/*.png
 public/uploads/*.jpg
 public/uploads/*.png
 public/uploads/*.svg
