Added single quotes to env for mail sender

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ MAIL_USERNAME=YOURUSERNAME
 MAIL_PASSWORD=YOURPASSWORD
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDR=you@example.com
-MAIL_FROM_NAME=Snipe-IT
+MAIL_FROM_NAME='Snipe-IT'
 
 
 # --------------------------------------------
